--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,23 @@
         android:theme="@style/Theme.TestApp2"
         tools:targetApi="31">
         <activity
-            android:name=".Profile"
+            android:name=".Forgotpass"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Profile"
+            android:exported="false">
+
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -27,8 +37,6 @@
         <activity
             android:name=".Splash"
             android:exported="true">
-
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
